--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
 
 #sidebar {
     width: 20%;
+    display: inline-block;
     font-size: 20px;
 }
 
@@ -27,7 +28,34 @@ body {
 }
 
 #sidebar ul li {
-    padding-bottom: 20px;
+    margin-bottom: 40px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
     cursor: pointer;
 }
 
+.side-items li a:hover {
+    font-weight: bold;
+}
+
+.panel-link {
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.activePanel {
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+}
+
+.major-panel {
+    width: 60%;
+    display: inline-block;
+    background-color: grey;
+    vertical-align: top;
+    margin-top: 18px;
+}
