--- a/public/styles.css
+++ b/public/styles.css
@@ -17,7 +17,7 @@ body {
     color: black;
 }
 
-#sidebar {
+#sidebar, #rightbar {
     width: 20%;
     display: inline-block;
     font-size: 14px;
@@ -55,7 +55,21 @@ a {
 .major-panel {
     width: 60%;
     display: inline-block;
-    background-color: grey;
     vertical-align: top;
-    margin-top: 14opx;
+    margin-top: 14px;
+}
+
+#photos {
+    line-height: 0;
+    -webkit-column-count: 2;
+    -webkit-column-gap:   0px;
+    -moz-column-count:    2;
+    -moz-column-gap:      0px;
+    column-count:         2;
+    column-gap:           0px;
+}
+
+.my-photos {
+    width: 100% !important;
+    height: auto !important;
 }
